--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,67 +3,26 @@ trigger:
 
 name: $(BuildDefinitionName)_$(Year:yyyy).$(Month).$(DayOfMonth)$(Rev:.r)
 
+trigger:
+  branches:
+    include:
+      - master
+      - feat/*
+  paths:
+    exclude:
+      - 'SportsData.Api/*'
+      - 'SportsData.Contest/*'
+      - 'SportsData.Core/*'
+      - 'SportsData.Franchise/*'
+      - 'SportsData.Notification/*'
+      - 'SportsData.Player/*'
+      - 'SportsData.Producer/*'
+      - 'SportsData.Season/*'
+      - 'SportsData.Venue/*'
+
 pool:
   vmImage: 'ubuntu-latest'
-  name: Azure Pipelines
-
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
-  Major: '1'
-  Minor: '0'
-  Patch: '1'
-  PackageVersion: '1.0.1'
 
 steps:
-- task: UseDotNet@2
-  displayName: 'Use .NET 8 SDK'
-  inputs:
-    packageType: 'sdk'
-    version: '8.0.x'
-    includePreviewVersions: true
-
-- task: NuGetCommand@2
-  displayName: 'NuGet Restore'
-  inputs:
-    command: 'restore'
-    restoreSolution: '**/*.sln'
-    feedsToUse: 'select'
-    
-- task: VSBuild@1
-  displayName: 'Build sports-data-core solution'
-  inputs:
-    solution: '**\*.sln'
-    restoreNugetPackages: true
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
-- task: DotNetCoreCLI@2
-  displayName: 'Run Unit Tests'
-  inputs:
-    command: 'test'
-    projects: '**/*.csproj'
-    testRunTitle: 'sdCore-tests-unit'
-
-- task: WhiteSource@21
-  inputs:
-    cwd: '$(System.DefaultWorkingDirectory)'
-    projectName: 'sports-data-core'
-    
-- task: NuGetCommand@2
-  displayName: 'Nuget Pack'
-  inputs:
-    command: 'pack'
-    versioningScheme: byBuildNumber
-    versionEnvVar: '$(Build.BuildNumber)'
-    packagesToPack: '**/SportsData.Core.csproj'
-    packDestination: '$(Build.ArtifactStagingDirectory)'
-
-- task: NuGetCommand@2
-  displayName: 'Nuget Push'
-  inputs:
-    command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
-    nuGetFeedType: 'internal'
-    publishVstsFeed: '2bb0cd0d-fa6e-42f0-9b7e-9cc1ce065e55/de94ed5a-8390-4547-bdd9-f975a712aa70'
+  - script: |
+      echo "Hello from '/' root folder."
